--- a/html/list.html
+++ b/html/list.html
@@ -48,6 +48,7 @@
 						<a href="/cc?themeId=business&amp;bs=default">Business</a>
 						<a href="/cc?themeId=business&amp;bs=heavy">Heavy</a>
 						<a href="/cc?themeId=business&amp;bs=kid">Kid</a>
+						<a href="/cc?themeId=business&original_asset_id=206011669">Kid (Boy)</a>
 						<div></div>
 						<a href="/cc?themeId=whiteboard&amp;bs=default">Whiteboard</a>
 						<a href="/cc?themeId=whiteboard&amp;bs=kid">Whiteboard (Kid)</a>
