--- a/html/list.html
+++ b/html/list.html
@@ -47,7 +47,7 @@
 						<div></div>
 						<a href="/cc?themeId=business&amp;bs=default">Business</a>
 						<a href="/cc?themeId=business&amp;bs=heavy">Heavy</a>
-						<a href="/cc?themeId=business&amp;bs=kid">Kid</a>
+						<a href="/cc?themeId=business&amp;bs=kid">Kid (Girl)</a>
 						<a href="/cc?themeId=business&original_asset_id=206011669">Kid (Boy)</a>
 						<div></div>
 						<a href="/cc?themeId=whiteboard&amp;bs=default">Whiteboard</a>
